--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,6 +2,6 @@
 <h1 class="top-heading">ようこそ <strong>Bookers</strong> へ！</h1>
 
 <!--メイン-->
-<p class="top-text"><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p>
-<p class="top-text">印象を共有し交換することができます</p>
+<p class="basic-text"><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p>
+<p class="basic-text">印象を共有し交換することができます</p>
 <%= link_to "start", books_path, class: "top-start" %>
