--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,18 +15,11 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td> <%= link_to "show", book_path(book.id) %> </td>
-        <td><a class="edit_31192" href="/books/31192/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_31192" rel="nofollow" data-method="delete" href="/books/31192">Destroy</a></td>
+        <td><%= link_to "Show", book_path(book.id) %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete, data: { confirm: "Are you sure?" } %></td>
       </tr>
     <% end %>
-    <tr>
-      <td>リーダブルコード</td>
-      <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-      <td><a class="show_31192" href="/books/31192">Show</a></td>
-      <td><a class="edit_31192" href="/books/31192/edit">Edit</a></td>
-      <td><a data-confirm="Are you sure?" class="destroy_31192" rel="nofollow" data-method="delete" href="/books/31192">Destroy</a></td>
-    </tr>
   </tbody>
 </table>
 
@@ -36,9 +29,9 @@
 
 <%= form_with model: @book, local:true do |f| %>
   <p>Title</p>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, class: "form" %>
   <p>Body</p>
-  <%= f.text_area :body %>
+  <%= f.text_area :body, class: "form" %>
 
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Create Book', class: "submit-button", method: :create %>
 <% end %>
