[Update] フラッシュメッセージの実装

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,5 @@
+<%= flash[:success] %>
+
 <p class = "basic-text"> <strong>Title: </strong><%=@book.title %></p>
 <p class = "basic-text"> <strong>Body: </strong><%= @book.body %></p>
 
