--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,4 +3,4 @@
 <p class = "basic-text"> <strong>Title: </strong><%=@book.title %></p>
 <p class = "basic-text"> <strong>Body: </strong><%= @book.body %></p>
 
-<p><%= link_to "Edit", edit_book_path(@book.id), class: "edit" %> | <%= link_to "Back", books_path, class: "back" %></p>
+<p><%= link_to "Edit", edit_book_path(@book.id), class: "link" %> | <%= link_to "Back", books_path, class: "link" %></p>
